manual updated in several sections

--- a/doc/brillouin.tex
+++ b/doc/brillouin.tex
@@ -1,12 +1,12 @@
 \newpage
-\section{An Isotropic Spin - single ion module}\label{brillouin}
+\section{Module {\prg brillouin} - an Isotropic Spin Single Ion Module}\label{brillouin}
 
 A magnetic ion often can be described by a pure spin moment (transition
 metal ions, $^{3+}$Gd, $^{2+}$Eu). In this description the magnetic moment
-${\mbf M}=g_J \mu_B <{\mbf J}>_T$ is calculated by the Brillouin function. 
+${\mbf M}=g_J \mu_B <{\hat \mbf J}>_T$ is calculated by the Brillouin function. 
 
 \begin{equation}
-<\mbf J>=\frac{\mbf H}{|\mbf H|} B_{J}(x=g_J \mu_B |\mbf H|/kT)
+<\hat \mbf J>=\frac{\mbf H}{|\mbf H|} B_{J}(x=g_J \mu_B |\mbf H|/kT)
 \end{equation}
 
 with
