--- a/doc/mcdiff.tex
+++ b/doc/mcdiff.tex
@@ -72,7 +72,7 @@ Here follows an example input file (see examples/ndcu2b\_new/mcdiff\index{mcdiff
 #            9....|MSFdip.P|  
 #            10....Re(MSFdip.P)
 #            11....Im(MSFdip.P)
-#            12....angl(Q,P)[°]
+#            12....angl(Q,P)[ï¿½]
 #            13....i(MSFxMSF*).P
 #            14....I+          
 #            15....I-          
@@ -452,7 +452,7 @@ cross section:
 \begin{equation}\label{dsdode}
 \frac{d^2\sigma}{d\Omega dE'}=N\frac{k'}{k}\left( \frac{\hbar \gamma e^2}{m_e c^2}  \right)^2
 %\sum_{\mbf Q} \delta_{\vec\kappa,\mbf Q}
-\sum_{\alpha\beta}(\delta_{\alpha\beta}-\hat \mbf Q_{\alpha} \hat \mbf Q_{\beta}) 
+\sum_{\alpha\beta=x,y,z}(\delta_{\alpha\beta}-\hat \mbf Q_{\alpha} \hat \mbf Q_{\beta}) 
 S^{\alpha \beta}_{\rm mag}(\mbf Q,\omega)+
 N\frac{k'}{k}S_{\rm nuc}(\mbf Q,\omega)
 \end{equation}
